--- a/src/views/results.ejs
+++ b/src/views/results.ejs
@@ -17,6 +17,30 @@
 						<% }) %>
 				</ul>
 			</div>
+
+
+			<section class="interesting_products" style="margin: 1%;">
+
+				<div class="containsproduct">
+					<% category.products.forEach(({id,name, images,discount,price})=> { %>
+						<article>
+							<a href="/products/detail/<%= id %> "><img class="main__section__img"
+									src="/img/<%= images[0].file %>" alt=""></a>
+							<div class="article-text">
+								<p class="p2"><del>$<%= toThousand(price) %></del></p>
+								<h2 style="padding-right: 20px;">$<%= toThousand(price - (price * discount / 100)) %>
+								</h2>
+								<span>
+									<%= discount %>%OFF
+								</span>
+								<p>
+									<%= name %>
+								</p>
+							</div>
+						</article>
+						<% }) %>
+				</div>
+			</section>
 			<main class="interesting_products">
 				<% if (products.length> 0) { %>
 					<section class="main__section">
@@ -43,10 +67,12 @@
 							</div>
 						</section>
 						<% }else{ %>
-								<div class="msj-category">
-									<p>No se encontraron resultados de <%= keywords %></p>
-								</div>
-							<h4 style="font-family: 'roboto'; margin-left : 2%;">Productos que te pueden llegar a interesar</h4>
+							<div class="msj-category">
+								<p>No se encontraron resultados de <%= keywords %>
+								</p>
+							</div>
+							<h4 style="font-family: 'roboto'; margin-left : 2%;">Productos que te pueden llegar a
+								interesar</h4>
 							<div class="containsproduct">
 								<% offer.forEach(({id,name, images,discount,price})=> { %>
 									<article>
