--- a/public/stylesheets/productCart.css
+++ b/public/stylesheets/productCart.css
@@ -1,47 +1,59 @@
-.back-color{
-    background-color: gray;
-    border-radius: 4px;
+.cart-pag{
+    margin: 80px auto;
+}
+table{
+    width: 100%;
+    border-collapse: collapse;
 }
 
-.p-left{
-    padding-left: 10px;
+.cart-info{
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.w-250{
-    width: 250px;
+th{
+    text-align: left;
+    padding: 5px;
+    color: #fff;
+    background: black;
+    font-weight: normal;
 }
 
-.h-34{
-    height: 34px;
+td{
+    padding: 10px 5px;
 }
 
-.w-250{
-    width: 250px;
+td input{
+    width: 40px;
+    height: 30px;
+    padding: 5px;
 }
 
-.h-250{
-    height: 250px;
+td a{
+    color: red;
+    font-size: 12px;
 }
 
-.button{
-    width: 50px;
-    height: 50PX;
-    border: none;
-    background-color: #72223E;
+td img{
+    width:  80px;
+    height: 80px;
+    margin-right: 10px;
 }
 
-.button1{
-    width: 50px;
-    height: 50PX;
-    background-color: gray;
-    border: none;
+.precio-total{
+    display: flex;
+    justify-content: flex-end;
 }
 
-.img-cart{
-    width: 100px;
-    height: 100px;
+.precio-total table{
+    border-top: 3px solid black;
+    width: 100%;
+    max-width: 565px;
 }
 
-.p-left{
-    padding-left: 10px;
+td:last-child{
+    text-align: right;
+}
+th:last-child{
+    text-align: right;
 }
