--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -10,19 +10,19 @@
                 <form action="" method="POST" enctype="multipart/form-data">
                     <div class="form-reg">
                         <label for="name">NOMBRE</label>
-                        <input placeholder="Daniel" type="text" name="name" id="name"
+                        <input placeholder="Nombre" type="text" name="name" id="name"
                             value="<%= locals.old && old.name ? old.name : null %>"
                             class="form-control <%= locals.errors && errors.name ? 'is-invalid' : null %>">
-                        <p class="text-danger">
+                        <p class="text-danger" id="errorName">
                             <%= locals.errors && errors.name ? errors.name.msg : null %>
                         </p>
                     </div>
                     <div class="form-reg">
                         <label for="surname">APELLIDO</label>
-                        <input placeholder="Martinez" type="text" name="surname" id="surname"
+                        <input placeholder="Apellido" type="text" name="surname" id="surname"
                             value="<%= locals.old && old.surname ? old.surname : null %>"
                             class="form-control <%= locals.errors && errors.surname ? 'is-invalid' : null %>">
-                        <p class="text-danger">
+                        <p class="text-danger" id="errorSurname">
                             <%= locals.errors && errors.surname ? errors.surname.msg : null %>
                         </p>
                     </div>
@@ -31,7 +31,7 @@
                         <input placeholder="mi@gmail.com" type="text" name="email" id="email"
                             value="<%= locals.old && old.email ? old.email : null %>"
                             class="form-control <%= locals.errors && errors.email ? 'is-invalid' : null %>">
-                        <p class="text-danger">
+                        <p class="text-danger" id="errorEmail">
                             <%= locals.errors && errors.email ? errors.email.msg : null %>
                         </p>
                     </div>
@@ -40,7 +40,7 @@
                         <input placeholder="********" type="password" name="password" id="password"
                             value="<%= locals.old && old.password ? old.password : null %>"
                             class="form-control <%= locals.errors && errors.password ? 'is-invalid' : null %>">
-                        <p class="text-danger">
+                        <p class="text-danger" id="errorPassword">
                             <%= locals.errors && errors.password ? errors.password.msg : null %>
                         </p>
                     </div>
@@ -96,6 +96,6 @@
                 </form>
             </section>
         </main>
-<script src="/js/userRegister.js"></script>
+<script src="/js/register.js"></script>
     </body>
 </html>
